Bug 99371 - DDE links cannot be edited/updated manually via Function Wizard
Summary: DDE links cannot be edited/updated manually via Function Wizard
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-18 12:19 UTC by Martin Nathansen
Modified: 2016-09-16 07:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
CalcDdeSrc.odt, CalcDdeDestBroken.odt (15.50 KB, application/zip)
2016-04-18 12:19 UTC, Martin Nathansen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Nathansen 2016-04-18 12:19:02 UTC
Created attachment 124457 [details]
CalcDdeSrc.odt, CalcDdeDestBroken.odt

When manually editing a DDE links with the help of the Function Wizard in Calc the link is not updated properly: While editing the DDE link a lot of new DDE links are added to the old DDE link and all these wrong DDE links are saved to the spreadsheet document (content.xml). Here an example:

old DDE-Link before update:
/old/path/calc.odt

DDE-Links after update:
/old/path/calc.odt
/ol/path/calc.odt
/o/path/calc.odt
//path/calc.odt
/n/path/calc.odt
/ne/path/calc.odt
/new/path/calc.odt

Attached the calc source doc together with a broken destination doc:
Comment 1 Katarina Behrens (Inactive) 2016-04-18 12:22:42 UTC
This is very much confirmed (after all, we've been debugging the issue for couple of days now)
Comment 2 Martin Nathansen 2016-04-18 13:42:35 UTC
https://gerrit.libreoffice.org/#/c/24213/
Comment 3 Commit Notification 2016-04-18 17:47:08 UTC
Martin Nathansen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a92ada1f624b3d37976845517595e15ed5a73f6

tdf#99371 fix for DDE link update via Function Wizard

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2016-09-15 22:33:16 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 5 Martin Nathansen 2016-09-16 07:27:18 UTC
It is fixed.