tdf#99371 fix for DDE link update via Function Wizard

With this fix the DDE links can be edited again without
producing additional wrong DDE links. However below
the updated DDE link there is still a unnecessary table
added which should be fixed.

Change-Id: I51e5a7ec84d2fc1429e68554dc131e4e456540df