sc/source/core/data/simpleformulacalc.cxx
@@ -46,6 +46,11 @@ void ScSimpleFormulaCalculator::Calculate()
 
     mbCalculated = true;
     ScInterpreter aInt(nullptr, mpDoc, maAddr, *mpCode.get());
+
+    std::unique_ptr<sfx2::LinkManager> pNewLinkMgr;
+    pNewLinkMgr.reset( new sfx2::LinkManager(mpDoc->GetDocumentShell()) );
+    aInt.SetLinkManager( pNewLinkMgr.get() );
+
     if (mbMatrixFormula)
         aInt.AssertFormulaMatrix();
 
